2008-07-21  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com> 

	* Project/ProjectPackageCollection.cs: Cleanup. Fixes bug #390419.

2008-07-21  Lluis Sanchez Gual <lluis@novell.com> 

	* md1format.xml, Project/CProject.cs, Project/CProjectConfiguration.cs,
	  Project/Package.cs: Moved serialization engine to MonoDevelop.Core.
	  Use new syntax for specifying attribute scope.

2008-06-25  Lluis Sanchez Gual <lluis@novell.com> 

	* Project/CProject.cs: Don't set the build action for files when
	  loading a project. Fixes bug #402336.

2008-06-22  Mitchell Wheeler <mitchell.wheeler@gmail.com>

	* Compiler/GNUCompiler.cs: Fix bug#379620.

2008-06-22  Andrés G. Aragoneses <aaragoneses@novell.com> 

	* Gui/EditPackagesDialog.cs: Change the way of distinguishing tabs not
	  to rely on strings that may be translated.
	* gtk-gui/CBinding.EditPackagesDialog.cs, gtk-gui/gui.stetic: Use
	  custom label names.

2008-06-21  Mitchell Wheeler <mitchell.wheeler@gmail.com>

	* Gui/EditPackagesDialog.cs: Re-check if there is a selected
	  package before setting the package details button to sensitive
	  on tab/page change.
	  Fixes new steps to reproduce the bug 398789.

2008-06-10  Marcos David Marín Amador <marcosmarin@gmail.com>

	* Gui/EditPackagesDialog.cs: Check if there is a selected package
	  before setting the package details button to sensitive.
	  Fixes bug 398789.

2008-06-04  Marcos David Marín Amador <marcosmarin@gmail.com>

	* Gui/GeneralOptionsPanel.cs, Parser/TagDatabaseManager.cs: Don't
	  parse local valriables by default.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* Project/CProject.cs: The configuration parameter of GetDeployFiles is
	  a solution configuration, so it needs to get the mapped project
	  configuration name. Track some api changes.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* CBinding.addin.xml: Bump MD version.

2008-05-30  Lluis Sanchez Gual <lluis@novell.com> 
